// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-tooltip default 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/mode mode="definition" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline m--is-mode-definition"
>
  <div
    class="m-popper"
  >
    <div>
      <a
        aria-controls="mTooltip-uuid-controls"
        aria-haspopup="true"
        class="m-link m-tooltip__link m--is-unvisited m--no-underline m--is-button"
        href="#"
        id="mTooltip-uuid"
        tabindex="0"
      >
        <!---->
         
        <span
          class="m-link__text"
        />
         
        <!---->
      </a>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/mode mode="icon" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/mode mode="link" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <a
        aria-controls="mTooltip-uuid-controls"
        aria-haspopup="true"
        class="m-link m-tooltip__link m--is-unvisited m--is-button"
        href="#"
        id="mTooltip-uuid"
        tabindex="0"
      >
        <!---->
         
        <span
          class="m-link__text"
        />
         
        <!---->
      </a>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom-end" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom-start" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left-end" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left-start" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right-end" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right-start" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top-end" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top-start" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/size size="large" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-tooltip/size size="small" 1`] = `
<div
  class="m-popup m-tooltip m--is-inline"
>
  <div
    class="m-popper"
  >
    <div>
      <button
        aria-controls="mTooltip-uuid-controls"
        class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
        id="mTooltip-uuid"
        style="width: 22px; height: 22px;"
        title="Ouvrir l'infobulle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-icon-button__icon"
          height="20px"
          width="20px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;
